--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <postgresql.version>42.7.3</postgresql.version>
         <maven.failsafe.version>3.1.0</maven.failsafe.version>
         <jib.version>3.4.2</jib.version>
+        <flyway.version>10.13.0</flyway.version>
     </properties>
 
     <dependencies>
@@ -65,6 +66,12 @@
         <dependency>
             <groupId>org.flywaydb</groupId>
             <artifactId>flyway-core</artifactId>
+            <version>${flyway.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-database-postgresql</artifactId>
+            <version>${flyway.version}</version>
         </dependency>
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
