--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.3.2</version>
+        <version>3.3.5</version>
         <relativePath/>
     </parent>
     <groupId>com</groupId>
@@ -16,8 +16,8 @@
 
     <properties>
         <java.version>21</java.version>
-        <kotlin.version>2.0.0</kotlin.version>
-        <testcontainers.version>1.20.0</testcontainers.version>
+        <kotlin.version>2.0.20</kotlin.version>
+        <testcontainers.version>1.20.3</testcontainers.version>
         <mockk.version>1.13.10</mockk.version>
         <jsonwebtoken.version>0.12.5</jsonwebtoken.version>
         <logstash.version>7.4</logstash.version>
@@ -215,6 +215,9 @@
                     <to>
                         <image>stockcomp-server-image</image>
                     </to>
+                    <from>
+                        <image>eclipse-temurin:21.0.4_7-jre-alpine@sha256:3f716d52e4045433e94a28d029c93d3c23179822a5d40b1c82b63aedd67c5081</image>
+                    </from>
                 </configuration>
             </plugin>
         </plugins>
