--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,8 +14,8 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.open-in-view=false
 spring.jpa.properties.jakarta.persistence.sharedCache.mode=UNSPECIFIED
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://auth-backend-service:80
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://auth-backend-service:80/server/.well-known/jwks.json
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://accounts.google.com
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://www.googleapis.com/oauth2/v3/certs
 
 spring.task.scheduling.pool.size=6
 
