--- a/k8s/stockcomp.yaml
+++ b/k8s/stockcomp.yaml
@@ -30,10 +30,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: stockcomp-service
+  labels:
+    app: stockcomp
 spec:
   selector:
     app: stockcomp
   ports:
-    - port: 8080
+    - name: http
+      port: 8080
       targetPort: 8080
 
