--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,10 +9,9 @@ env:
   IMAGE_NAME: stockcomp
 
 jobs:
-  build_and_push:
-    name: Build and push
+  test:
+    name: Run tests
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v5
 
@@ -22,8 +21,15 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
 
-      - name: Build and run tests with Maven
-        run: mvn clean install
+      - name: Run tests with Maven
+        run: mvn clean verify
+
+  build_and_push:
+    name: Build and push
+    runs-on: ubuntu-latest
+    needs: test
+    steps:
+      - uses: actions/checkout@v5
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
@@ -32,7 +38,7 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push
+      - name: Build and push image
         uses: docker/build-push-action@v6
         with:
           push: true
