--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,8 +9,8 @@ env:
   IMAGE_NAME: stockcomp
 
 jobs:
-  test:
-    name: Run tests
+  unit-tests:
+    name: Run unit tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
@@ -22,12 +22,28 @@ jobs:
           distribution: 'temurin'
 
       - name: Run tests with Maven
-        run: mvn clean verify
+        run: mvn clean test
+
+  integration-tests:
+    name: Run integration tests
+    runs-on: ubuntu-latest
+    needs: unit-tests
+    steps:
+      - uses: actions/checkout@v5
+
+      - name: Set up JDK 21
+        uses: actions/setup-java@v5
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+
+      - name: Run integration tests with Maven
+        run: mvn clean verify -Dskip.ut=true
 
   build_and_push:
     name: Build and push
     runs-on: ubuntu-latest
-    needs: test
+    needs: unit-tests
     steps:
       - uses: actions/checkout@v5
 
