--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
         <jib.version>3.4.6</jib.version>
         <flyway.version>11.14.1</flyway.version>
         <loki.logback.version>2.0.0</loki.logback.version>
+        <shedlock.version>6.10.0</shedlock.version>
         <skip.ut>false</skip.ut>
     </properties>
 
@@ -71,6 +72,11 @@
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib</artifactId>
             <version>${kotlin.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.javacrumbs.shedlock</groupId>
+            <artifactId>shedlock-spring</artifactId>
+            <version>${shedlock.version}</version>
         </dependency>
         <dependency>
             <groupId>org.flywaydb</groupId>
