Configuring a lockprovider for Shedlock

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,8 +21,9 @@ spring.security.oauth2.resourceserver.jwt.jwk-set-uri=https://www.googleapis.com
 spring.task.scheduling.pool.size=6
 
 symbol.search.delay.time=3600000
-
 token.name=accessToken
+scheduling.enabled=true
+
 
 logging.level.root=INFO
 logging.level.org.springframework.web=INFO
