--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <postgresql.version>42.7.8</postgresql.version>
         <maven.failsafe.version>3.5.4</maven.failsafe.version>
         <maven.surefire.version>3.5.4</maven.surefire.version>
+        <maven.exec.version>3.5.0</maven.exec.version>
         <jib.version>3.4.6</jib.version>
         <flyway.version>11.15.0</flyway.version>
         <loki.logback.version>2.0.1</loki.logback.version>
@@ -33,6 +34,7 @@
         <spring.modulith.version>1.4.4</spring.modulith.version>
         <spring.modulith.test.version>2.0.0-RC1</spring.modulith.test.version>
         <springmockk.version>4.0.2</springmockk.version>
+        <ktlint.version>1.7.1</ktlint.version>
         <skip.ut>false</skip.ut>
     </properties>
 
@@ -238,6 +240,57 @@
                 <configuration>
                     <skipTests>${skip.ut}</skipTests>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>${maven.exec.version}</version>
+                <executions>
+                    <!--Run ktlint format (auto-fix style issues) -->
+                    <execution>
+                        <id>ktlint-format</id>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <includePluginDependencies>true</includePluginDependencies>
+                            <executable>java</executable>
+                            <arguments>
+                                <argument>-classpath</argument>
+                                <classpath/>
+                                <argument>com.pinterest.ktlint.Main</argument>
+                                <argument>--format</argument>
+                                <argument>--relative</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                    <!--Run ktlint check (verify formatting only) -->
+                    <execution>
+                        <id>ktlint-check</id>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <includePluginDependencies>true</includePluginDependencies>
+                            <executable>java</executable>
+                            <arguments>
+                                <argument>-classpath</argument>
+                                <classpath/>
+                                <argument>com.pinterest.ktlint.Main</argument>
+                                <argument>--relative</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.pinterest.ktlint</groupId>
+                        <artifactId>ktlint-cli</artifactId>
+                        <version>1.7.1</version>
+                        <classifier>all</classifier>
+                        <type>jar</type>
+                    </dependency>
+                </dependencies>
             </plugin>
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
